# cards-for-humanity

./: .gitignore  Cargo.toml  README.md  build.sh  download_cards.js
client/: Cargo.toml  package.json  tsconfig.json  webpack.config.js
client-old/: Cargo.toml
client-old/src/: game.rs  html.rs  js_events.rs
client-old/src/templates/: server_entry.html
client/src/: App.tsx  Context.tsx  Session.tsx  console.rs  game.rs  html.rs  js_events.rs  js_imports.rs  lib.rs  webgl.rs  ws.rs
client/src/game/: Game.tsx
client/src/homepage/: Homepage.css  Homepage.tsx
client/src/lobby/: Lobby.css  Lobby.tsx
client/src/rendering/: mod.rs  render_manager.rs  shapes.rs  webgl.rs
client/src/shaders/: card.frag  card.vert
client/src/templates/: black_card.html  game.html  player.html  responses.html  server_entry.html  white_card.html
common/: Cargo.toml
common/src/: lib.rs
common/src/data/: cards.rs  mod.rs  vec_map.rs
common/src/protocol/: clientbound.rs  mod.rs  serverbound.rs
frontend/src/: app.jsx  board.jsx  card.jsx  game.jsx  hand.jsx
server/: Cargo.toml  build.rs
server-old/: _Cargo.toml
server-old/src/: logging.rs  main.rs
server-old/src/game/: game.rs  lobby.rs  mod.rs
server-old/www/: card_maker.html  index.html  settings.css
server/packs/official/: CAH Base Set.json
server/public/: index.html  manifest.json
server/src/: chan.rs  client.rs  lobby.rs  logging.rs  main.rs  packs.rs  server.rs
server/src/client/: handler.rs  mod.rs  proto.rs  proto_extern.rs
server/src/data/: card.rs  mod.rs  pack_store.rs
server/src/game/: game.rs  handler.rs  lobby.rs  mod.rs  packs.rs  proto.rs
server/src/lobby/: handler.rs  mod.rs  proto.rs
server/src/network/: client.rs  handler.rs  mod.rs
server/www/: game.css  global.css  index.html  lobby.css  stylesheet.css
server/www/shaders/: card.frag  card.vert
src/: main.rs
src/data/: mod.rs  pack_store.rs
