[package]
name = "client"
version = "0.1.0"
authors = ["Cassy343 <isilversmith810@gmail.com>, Maddymakesgames <madelinemakesgames@gmail.com>"]
edition = "2018"


[dependencies]
common = {path = "../common"}
serde = "1.0"
js-sys = "0.3.51"
wasm-bindgen = { version = "0.2.74", features = ["nightly", "serde-serialize"] }
# nalgebra = "0.26.2"
wasm-bindgen-futures = "0.4.24"
console_error_panic_hook = "0.1.6"
uuid = { version = "0.8.2", features = ["wasm-bindgen"] }

[lib]
crate-type =["cdylib"]

[dependencies.web-sys]
version = "0.3.48"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlRenderingContext',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'Window',
    'WebSocket',
    'console',
    'MessageEvent',
    'MouseEvent',
    'WebGlUniformLocation',
    "CloseEvent",
    "ErrorEvent",
    'CanvasRenderingContext2d',
    'CanvasGradient',
    'TextMetrics',
    'Response',
    'Request',
    'RequestInit',
    'RequestMode',
    'EventTarget'
]
