[package]
name = "client"
version = "0.1.0"
authors = ["Cassy343 <isilversmith810@gmail.com>, Maddymakesgames <madelinemakesgames@gmail.com>"]
edition = "2018"


[dependencies]
common = {path = "../common"}
serde = "1.0"
js-sys = "0.3.51"
wasm-bindgen = { version = "0.2.74", features = ["nightly", "serde-serialize"] }
wasm-bindgen-futures = "0.4.24"
console_error_panic_hook = "0.1.6"
uuid = { version = "0.8.2", features = ["wasm-bindgen"] }

[lib]
crate-type =["cdylib"]

[dependencies.web-sys]
version = "0.3.48"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Window',
    'WebSocket',
    'console',
    'MessageEvent',
    'MouseEvent',
    "CloseEvent",
    "ErrorEvent",
    'Response',
    'Request',
    'RequestInit',
    'RequestMode',
    'EventTarget'
]
