[package]
name = "server"
version = "0.1.0"
authors = ["Cassy343 <isilversmith810@gmail.com>", "Maddymakesgames <madelinemakesgames@gmail.com>"]
edition = "2018"

[dependencies]
common = {path = "../common"}
anyhow = "1.0.38"
serde_json = "1"
rand = "0.8.3"
futures = "0.3.13"
tokio = { version = "1.3.0", features = ["full"] }
warp = "0.3.0"
zip = "0.5.11"
linefeed = "0.6.0"
flate2 = "1.0.14"
log = "0.4.14"
log4rs = "1.0.0"
chrono = "0.4.19"
chrono-tz = "0.5.3"
serde = "1.0"

[target.'cfg(unix)'.dependencies]
termion = "1.5.6"

[build-dependencies]
walkdir = "2.3.1"
zip = "0.5.11"
