[package]
name = "server"
version = "0.1.0"
authors = ["Cassy343 <isilversmith810@gmail.com>", "Maddymakesgames <madelinemakesgames@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
either = "1.8"
futures = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
ts-rs = "6.2"
warp = "0.3.5"
